corrected navbar collapsed layout for tablets

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -643,24 +643,19 @@ span {
 	.navbar-brand img {
 		height: 8vh;
 	}
-
 	.navbar {
 		font-size: 0.9em !important;
 	}
-
 	.nav_networks img {
 		height: 30px !important;
 		margin-top: 3.5vh;
 	}
-
 	.navbar {
 		min-height: 10vh;
 	}
-
 	.navbar-brand img {
 		margin-top: -0.5vh;
 	}
-
 	body {
 		padding-top: 10vh;
 	}
@@ -672,22 +667,10 @@ span {
 	}
 }
 
-
-@media screen and (max-width: 767px) {
-	.navbar-collapse {
-		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.40);
-	}
-
-	.navbar {
-		font-size: 1em !important;
-	}
-
-	.nav_networks img {
-		height: 35px !important;
-	}
-}
-
 @media (max-width: 770px) {
+	.container-fluid {
+		padding-bottom: 7vh;
+	}
 	.navbar-collapse.collapse {
 		display: none !important;
 	}
@@ -700,5 +683,32 @@ span {
 	.navbar-header {
 		float:none;
 	}
-
+	.navbar-right {
+		float: none !important;
+	}
+	.navbar-toggle {
+		display: block;
+	}
+	.navbar-nav {
+		float: none!important;
+		margin-top: 4vh;
+		display: flex;
+		flex-direction: column;
+	}
+	.nav_networks {
+		margin-top: -2vh !important;
+		flex-direction: row;
+	}
+	#nav_aboutus {
+		margin-top: 0 !important;
+	}
+	.navbar-right {
+		margin-right: -20px;
+	}
+	.navbar {
+		font-size: 1em !important;
+	}
+	.nav_networks img {
+		height: 35px !important;
+	}
 }
